Primer intento de multiples generadores.

--- a/traffic_generator_test.ipynb
+++ b/traffic_generator_test.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,31 +34,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[-0.0444413  -0.15403631  0.11220247 ...  0.60841765 -0.23413203\n  0.62874581]\n"
+      "[ 0.16867325  0.05654588  0.02300619 ...  0.15773955 -0.0780388\n  0.20114423]\n"
      ]
     }
    ],
    "source": [
-    "# generate random numbers from N(0,1)\r\n",
-    "data_normal = norm.rvs(size=3600,loc=0,scale=0.5)\r\n",
+    "# generate random numbers from N(0,1)\n",
+    "data_normal = norm.rvs(size=3600,loc=0,scale=0.12)\n",
     "print(data_normal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "generator = tg.TrafficGenerator(\"from_north\", \"to_south\")\n",
-    "generator.generate(data_normal)"
+    "gen1 = tg.TrafficGenerator(\"from_north\", \"to_south\", name=\"genns\", replacefiles=true)\n",
+    "gen1.generate(data_normal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen2 = tg.TrafficGenerator(\"from_east\", \"to_west\", name=\"genew\")\n",
+    "gen2.generate(data_normal)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tg.config.testLaunch()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen1.restoreOldTrafficFilename()"
    ]
   },
   {
@@ -66,9 +94,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "tg.config.testLaunch()"
-   ]
+   "source": []
   }
  ]
 }
